mengubah email dan nomor telepon

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Vivi</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Odoo Developer,Web Developer,Web Designer,Frontend Developer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Odoo Developer,Web Developer,Frontend Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -667,8 +667,8 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                      <li><span class="ion-ios-telephone"></span> (617) 557-0089</li>
-                      <li><span class="ion-email"></span> contact@example.com</li>
+                      <li><span class="ion-ios-telephone"></span> +6283831948972 </li>
+                      <li><span class="ion-email"></span> vivipermatasari@gmail.com </li>
                     </ul>
                   </div>
                   <div class="socials">
