--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Vivi</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Odoo Developer,Web Developer,Frontend Developer</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">I am Vivi Permatasari</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Web Developer,Frontend Developer,Backend Developer,Odoo Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -109,9 +109,9 @@
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS</span> <span class="pull-right">75%</span>
+                  <span>CSS</span> <span class="pull-right">50%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>JAVASCRIPT</span> <span class="pull-right">50%</span>
@@ -119,9 +119,9 @@
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PYTHON</span> <span class="pull-right">90%</span>
+                  <span>PYTHON</span> <span class="pull-right">75%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -274,47 +274,36 @@
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-3 col-lg-3">
+        <div class="col-sm-4 col-lg-4">
           <div class="counter-box">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">450</p>
-              <span class="counter-text">WORKS COMPLETED</span>
+              <p class="counter">+2000</p>
+              <span class="counter-text">TICKETS COMPLETED</span>
             </div>
           </div>
         </div>
-        <div class="col-sm-3 col-lg-3">
+        <div class="col-sm-4 col-lg-4">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">15</p>
+              <p class="counter">5</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
         </div>
-        <div class="col-sm-3 col-lg-3">
+        <div class="col-sm-4 col-lg-4">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">550</p>
+              <p class="counter">10</p>
               <span class="counter-text">TOTAL CLIENTS</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3 col-lg-3">
-          <div class="counter-box pt-4 pt-md-0">
-            <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
-            </div>
-            <div class="counter-num">
-              <p class="counter">36</p>
-              <span class="counter-text">AWARD WON</span>
             </div>
           </div>
         </div>
