--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vivi's Profile</title>
+  <title>dev-odoo</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -31,7 +31,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Vivi</a>
+      <a class="navbar-brand js-scroll" href="#page-top">dev-odoo</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -70,10 +70,8 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Vivi Permatasari</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Web Developer,Frontend Developer,Backend Developer,Odoo Developer</span><strong class="text-slider"></strong></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+          <h1 class="intro-title mb-4">Hello!! I am Vivi.</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Odoo Developer,Frontend Developer,Backend Developer</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
@@ -96,17 +94,17 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Vivi Permatasari</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Odoo developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>vivipermatasari@gmail.com</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Odoo Developer</span></p>
+                      <p><span class="title-s">Email: </span> <span>vivi.xrplx@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>+6283831948972</span></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <span>HTML</span> <span class="pull-right">75%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>CSS</span> <span class="pull-right">50%</span>
