--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
             <div class="service-content">
               <h2 class="s-title">Odoo Development</h2>
               <p class="s-description text-center">
-                Analyze your business, consult and discuss with you in order to understand your business operations and needs.
-                then develop the system for your business operations.
+                Analyze your business, consult and discuss with you in order to develop system suits your business operations.
               </p>
             </div>
           </div>
@@ -195,7 +194,7 @@
             <div class="service-content">
               <h2 class="s-title">Odoo Customization</h2>
               <p class="s-description text-center">
-                Customization Odoo feature to suits your business operations and needs.
+                Customization Odoo features to suits your business operations and needs. Include support and maintenance for 90 days.
               </p>
             </div>
           </div>
@@ -208,7 +207,7 @@
             <div class="service-content">
               <h2 class="s-title">Odoo Consulting</h2>
               <p class="s-description text-center">
-                Provide you insight in the functional capabilities of the Odoo for your business operations and needs.
+                Provide you insight in the functional capabilities of Odoo for your business operations and needs.
               </p>
             </div>
           </div>
@@ -298,7 +297,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Pebble Zonnepanelen</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Odoo Customization</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Customization</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -322,7 +321,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Aarde.nl</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Odoo Customization</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Customization</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -346,7 +345,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Credit Union</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Credit Union</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Customization</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -370,7 +369,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Senwell</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Odoo Consulting</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Development</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -394,7 +393,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Precise</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Odoo Consulting</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Consulting</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -418,7 +417,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Senwell</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Odoo Development</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Customizationt</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
