--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="service-content">
               <h2 class="s-title">Odoo Customization</h2>
               <p class="s-description text-center">
-                Customization Odoo features to suits your business operations and needs. Include support and maintenance for 90 days.
+                Customization Odoo features to suits your business operations and needs. Support and Maintenance for 90 days.
               </p>
             </div>
           </div>
