--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Vivi Permatasari</span></p>
                       <p><span class="title-s">Profile: </span> <span>Odoo Developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>vivi.xrplx@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+6283831948972</span></p>
+                      <p><span class="title-s">Email: </span> <span>vpodoodev@gmail.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>+6289676929430</span></p>
                     </div>
                   </div>
                 </div>
@@ -417,7 +417,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Senwell</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Customizationt</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Customization</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -500,10 +500,10 @@
             <div class="card-body">
               <div class="card-category-box">
                 <div class="card-category">
-                  <h6 class="category">Travel</h6>
+                  <h6 class="category">Development</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">See more ideas about Travel</a></h3>
+              <h3 class="card-title"><a href="blog-single.html">See more ideas about Development</a></h3>
               <p class="card-description">
                 Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
                 a pellentesque nec,
@@ -534,7 +534,7 @@
                   <h6 class="category">Web Design</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">See more ideas about Travel</a></h3>
+              <h3 class="card-title"><a href="blog-single.html">See more ideas about Web Design</a></h3>
               <p class="card-description">
                 Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
                 a pellentesque nec,
@@ -565,7 +565,7 @@
                   <h6 class="category">Web Design</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">See more ideas about Travel</a></h3>
+              <h3 class="card-title"><a href="blog-single.html">See more ideas about Web Design</a></h3>
               <p class="card-description">
                 Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
                 a pellentesque nec,
@@ -613,17 +613,16 @@
                       mollitia inventore?
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                      <li><span class="ion-ios-telephone"></span> +6283831948972 </li>
-                      <li><span class="ion-email"></span> vivipermatasari@gmail.com </li>
+                      <li><span class="ion-ios-location"></span> CANDI, SIDOARJO 61171, INDONESIA </li>
+                      <li><span class="ion-ios-telephone"></span> +6289676929430 </li>
+                      <li><span class="ion-email"></span> vpodoodev@gmail.com </li>
                     </ul>
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
+                      <li><a href=""><span class="ico-circle"><i class="ion-social-linkedid"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
