--- a/index.html
+++ b/index.html
@@ -620,9 +620,10 @@
                   </div>
                   <div class="socials">
                     <ul>
+                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-linkedid"></i></span></a></li>
+                      <li><a href=""><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
